--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<mockito.version>2.4.1</mockito.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>jcenter</id>
+			<name>bintray</name>
+			<url>http://jcenter.bintray.com</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -189,6 +197,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>AngularSpringBackend</finalName>
