DAO test have problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://vincentdbinstance.cpocnrvyk3vf.ca-central-1.rds.amazonaws.com:3306/springhibernate?autoReconnect=true&useSSL=false
+#jdbc.url = jdbc:mysql://vincentdbinstance.cpocnrvyk3vf.ca-central-1.rds.amazonaws.com:3306/springhibernate?autoReconnect=true&useSSL=false
+jdbc.url = jdbc:mysql://localhost:3306/springhibernate?autoReconnect=true&useSSL=false
 jdbc.username = zhengye1
 jdbc.password = Yukirin0715
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
