--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 		<junit.version>4.12</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<mockito.version>2.4.1</mockito.version>
+		<h2.version>1.4.193</h2.version>
+		<dbunit.version>2.5.3</dbunit.version>
 	</properties>
 
 	<dependencies>
@@ -232,7 +234,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>${dbunit.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>AngularSpringBackend</finalName>
